Need to work on strictness A and C !!!!